--- a/src/main/webapp/academico/categorias/index.xhtml
+++ b/src/main/webapp/academico/categorias/index.xhtml
@@ -133,7 +133,7 @@
 
 					<div class="flex-col-c p-t-130 p-b-40">
 						<span class="txt1 p-b-9"> ©&nbsp;<span id="tempo"></span>&nbsp;|&nbsp;
-							SIGEsco
+							SIGE
 
 
 
