--- a/src/main/webapp/academico/programador/permissao/cadastro.xhtml
+++ b/src/main/webapp/academico/programador/permissao/cadastro.xhtml
@@ -83,7 +83,7 @@
 
 						<h:dataTable value="#{permissaoBean.permissoes}" var="permissao"
 							id="tabela-escola"
-							styleClass="table table-bordered tabelaProfessor  tabela-funcionario"
+							styleClass="table table-bordered tabelaProfessor  tabela-funcionario left"
 							headerClass="cab-tabela" footerClass="fo-tabela"
 							style="margin-top: 20px;" rowClasses="linha2, linha1">
 
