--- a/src/main/webapp/academico/director/matricula/matricula.xhtml
+++ b/src/main/webapp/academico/director/matricula/matricula.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/academico/principal/templete.xhtml">
-	<ui:define name="titulo">Gerir Matrícula </ui:define>
+	<ui:define name="titulo">Gerir matrícula </ui:define>
 
 		<ui:define name="menu">
 		<ui:include src="/academico/director/template/menu.xhtml" />
