--- a/src/main/webapp/academico/escola/turma/alocarPorofessorNaTurma.xhtml
+++ b/src/main/webapp/academico/escola/turma/alocarPorofessorNaTurma.xhtml
@@ -576,7 +576,7 @@
 									style="color: blue;font-weight: 600;"
 									action="#{professorTurmaBean.selecionarFuncionario(funcionario)}">
 									<f:passThroughAttribute name="data-toggle" value="tooltip" />
-									<f:passThroughAttribute name="data-placement" value="left" />
+									<f:passThroughAttribute name="data-placement" value="top" />
 								</h:commandLink>
 								<h:commandLink value="#{funcionario.login}" immediate="true"
 									title="Selecionar esta professora?"
@@ -584,7 +584,7 @@
 									style="color: blue;font-weight: 600;"
 									action="#{professorTurmaBean.selecionarFuncionario(funcionario)}">
 									<f:passThroughAttribute name="data-toggle" value="tooltip" />
-									<f:passThroughAttribute name="data-placement" value="left" />
+									<f:passThroughAttribute name="data-placement" value="top" />
 								</h:commandLink>
 							</h:column>
 							<h:column width="370">
