--- a/src/main/webapp/academico/escola/matricula/matricula.xhtml
+++ b/src/main/webapp/academico/escola/matricula/matricula.xhtml
@@ -29,7 +29,7 @@
 		</h3>
 
 		<p:messages closable="true"
-			style=" margin-left: 5px;margin-right:5px;" />
+			style=" margin-left: 5px;margin-right:5px;" id="idMensagem"/>
 
 		<div class="card-body">
 
@@ -171,8 +171,8 @@
 							actionListener="#{alunoBean.buscarMatriculas}"
 							styleClass=" btn btn-primary " />
 						<h:commandButton value=" Cancelar" immediate="true"
-							action="/academico/secretario/index?faces-redirect=true"
-							styleClass=" btn btn-success" style="margin-left:10px" />
+							action="#{buscarFotoBean.voltar}" styleClass=" btn btn-success"
+							style="margin-left:10px" />
 					</div>
 
 					<h:dataTable id="tabela" value="#{alunoBean.matriculas}"
@@ -542,9 +542,9 @@
 
 				<div class=" row">
 
-					<h:outputLabel value="Matrícula: *"
-						styleClass="col-sm-2 control-label bolder textfim" />
-					<div class="1">
+					<h:outputLabel value="Matrícula :"
+						styleClass="col-sm-2 control-label texto-label textfim bolder" />
+					<div class="col-sm-1">
 						<h:outputText value="#{alunoBean.matriculaSelecionada.numero}" />
 					</div>
 
@@ -651,7 +651,9 @@
 									<f:selectItems value="#{alunoBean.matrizes}" var="matriz"
 										itemLabel="#{matriz.classe.descricao} #{matriz.tipoArea}"
 										itemValue="#{matriz.tipoArea}" />
-
+									<p:ajax event="change"
+										listener="#{alunoBean.buscarMatrizCurricular}"
+										update="idAreaEdicao" />
 								</h:selectOneMenu>
 							</div>
 						</div>
@@ -661,40 +663,52 @@
 					<h:outputLabel value="Disciplina: "
 						styleClass="col-sm-2 control-label texto-label bolder textfim" />
 					<div class="col-sm-5">
-						<h:selectOneMenu value="#{alunoBean.nota.disciplinaClasse}"
-							styleClass="form-control" required="true"
-							converter="disciplinaClasseConverter"
-							requiredMessage="O campo área curricular é obrigatório">
+						<h:selectOneMenu id="idDisciplinaClasse"
+							value="#{alunoBean.nota.disciplinaClasse}"
+							styleClass="form-control" converter="disciplinaClasseConverter">
 							<f:selectItem itemLabel="SELECIONE..." itemValue="#{null}" />
 							<f:selectItems value="#{alunoBean.matriz.disciplinaClasses}"
 								var="disciplinaClassse"
 								itemLabel="#{disciplinaClassse.disciplina.descricao}"
 								itemValue="#{disciplinaClassse}" />
-
+							
 						</h:selectOneMenu>
 					</div>
 				</div>
 
 
+				<div class="form-group row center">
+					<div class="col-sm-8">
+						<h:commandButton value="&#x21e6; Voltar" immediate="true"
+							actionListener="#{alunoBean.voltar}"
+							styleClass=" btn btn-success " />
 
+						<h:commandButton value="adicionar disciplina"
+							actionListener="#{alunoBean.adicionarDisciplina}"
+							styleClass=" btn btn-danger danger"  style=" margin-left: 1%;">
+						</h:commandButton>
 
-
-
+						<h:commandButton value="&#x2714; Confirmar"
+							actionListener="#{alunoBean.atualizarMatricula}"
+							styleClass=" btn btn-primary " style=" margin-left: 1%;" />
+					</div>
+				</div>
 
 				<h:panelGroup id="tabela-disciplinas">
 					<h:dataTable value="#{alunoBean.notas}" var="nota"
 						style="width:80%;"
 						styleClass="table table-bordered tabelaProfessor  tabela-funcionario left tabela1"
-						disabledTextSelection="true" columnClasses="center, ,center,center"
+						disabledTextSelection="true"
+						columnClasses="center, ,center,center"
 						rowKey="#{disciplinaDaClassse.disciplina.id}"
 						selection="#{alunoBean.disciplinaSelecionadas}"
 						emptyMessage="Nenhuma disciplina cadastrada">
 
-						<h:column style="width: 100px;">
+						<h:column headerClass="center">
 							<f:facet name="header">
-								<h:outputText value="Codigo" />
+								<h:outputText value="Ordem" />
 							</f:facet>
-							<h:outputText value="#{nota.disciplinaClasse.disciplina.id}"
+							<h:outputText value="#{nota.ordem}"
 								style="text-transform: uppercase;" />
 						</h:column>
 						<h:column>
@@ -705,35 +719,27 @@
 								value="#{nota.disciplinaClasse.disciplina.descricao}">
 							</h:outputText>
 						</h:column>
-						<h:column>
+						<h:column headerClass="center">
 							<f:facet name="header">
 								<h:outputText value="C.H. Semanal" />
 							</f:facet>
 							<h:outputText value="#{nota.disciplinaClasse.credito}">
 							</h:outputText>
 						</h:column>
-						<h:column>
+						<h:column headerClass="center">
 							<f:facet name="header">
 								<h:outputText value="Acções" />
 							</f:facet>
-							<h:commandLink>
-							<p:graphicImage url="#{buscarFotoBean.retornarImagesExcluir}"
-													height="16" width="16" />
+							<h:commandLink
+								actionListener="#{alunoBean.eliminarDisiplina(nota)}">
+								<p:graphicImage url="#{buscarFotoBean.retornarImagesExcluir}"
+									height="16" width="16" />
+
 							</h:commandLink>
 						</h:column>
 					</h:dataTable>
 				</h:panelGroup>
-				<div class="form-group row">
 
-					<div class="col-sm-5" style="text-align: center; margin-top: 1%;">
-						<h:commandButton value="Voltar" immediate="true"
-							actionListener="#{alunoBean.voltar}"
-							styleClass=" btn btn-primary " />
-						<h:commandButton value="Cadastrar"
-							actionListener="#{alunoBean.atualizarMatricula}"
-							style=" margin-left: 3%;" styleClass=" btn btn-primary " />
-					</div>
-				</div>
 			</h:panelGroup>
 
 		</div>
@@ -816,5 +822,9 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
 </h:form>
 </html>
