--- a/src/main/webapp/academico/escola/restrito/perfil.xhtml
+++ b/src/main/webapp/academico/escola/restrito/perfil.xhtml
@@ -9,121 +9,124 @@
 
 
 <h:form id="form_ambiente_comum" styleClass="form-atualizar"
-			enctype="multipart/form-data">
+	enctype="multipart/form-data">
 
-			<!--Panel-->
-			<div class="card">
-				<h4 class="card-header primary-color white-text ">
+	<!--Panel-->
+	<div class="card">
+		<h4 class="card-header primary-color white-text ">
 
-					<h:outputText value="Meu Perfil" style="font-weight: 700;" />
+			<h:outputText value="Meu Perfil" style="font-weight: 700;" />
 
-				</h4>
-				
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
-						<h:panelGrid styleClass="nao-ha-dado ui-widget-header margin">
-							<h:outputText
-								value="ATENÇÃO: Introduza a sua senha para prosseguir!"
-								style="margin:10px;display: inline-block;" />
-						</h:panelGrid>
+		</h4>
 
-					</h:panelGroup>
-					<p:messages closable="true" />
-				
-				<div class="card-body">
+		<h:panelGroup
+			rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
+			<h:panelGrid styleClass="nao-ha-dado ui-widget-header margin">
+				<h:outputText
+					value="ATENÇÃO: Introduza a sua senha para prosseguir!"
+					style="margin:10px;display: inline-block;" />
+			</h:panelGrid>
 
+		</h:panelGroup>
+		<p:messages closable="true" />
 
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
+		<div class="card-body">
 
 
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-2 col-form-label"
-								value="Senha:*" />
-							<div class="col-sm-6">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.autenticarSenha}" required="true"
-									requiredMessage="o campo senha é obrigatório">
-									<f:passThroughAttribute name="placeholder"
-										value="Introduza a sua senha" />
-									<f:passThroughAttribute name="autofocus" value="true" />
-								</h:inputSecret>
-							</div>
-						</div>
-						<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
-							styleClass="btn btn-primary"
-							actionListener="#{buscarFotoBean.autenticar}" />
+			<h:panelGroup
+				rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
 
 
-
-					</h:panelGroup>
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean !=false}">
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
-								value="Alterar Foto:" />
-							<div class="col-sm-3">
-								<h:inputFile label="Escolher arquivo" styleClass="profile-img"
-									value="#{buscarFotoBean.fotografia}">
-								</h:inputFile>
-							</div>
-						</div>
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
-								value=" Ocultar E–mail na
-							Área Pública?" />
-							<div class="col-sm-2">
-								<h:selectOneMenu value="#{buscarFotoBean.usuario.ocultarEmail}"
-									styleClass="form-control ocultar-email">
-									<f:selectItem itemLabel="Não" itemValue="#{false}" />
-									<f:selectItem itemLabel="Sim" itemValue="#{true}" />
-								</h:selectOneMenu>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
-								value="Estado Civil : " />
-
-							<div class="col-sm-5">
-								<h:panelGroup id="idEstadoCivil">
-									<h:selectOneMenu value="#{buscarFotoBean.usuario.estadoCivil}"
-										styleClass="form-control">
-										<f:selectItem itemLabel="SELECIONE..." itemValue="#{null}" />
-										<f:selectItems value="#{buscarFotoBean.estadoCivils}"
-											var="estadoCivil" itemLabel="#{estadoCivil}"
-											itemValue="#{estadoCivil}" />
-									</h:selectOneMenu>
-								</h:panelGroup>
-
-							</div>
-
-						</div>
-
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
-								value="Formação acadêmica/profissional: " />
-
-							<div class="col-sm-7">
-								<h:inputTextarea value="#{buscarFotoBean.funcionario.formacao}"
-									styleClass="form-control ocultar-email" rows="5" />
-
-
-							</div>
-
-						</div>
-
-						<div style="margin-top: 1%; text-align: center;">
-							<h:commandButton action="#{buscarFotoBean.atualizar}"
-								value="Atualizar Perfil" styleClass="btn btn-primary" />
-							<h:commandButton immediate="true"
-								action="#{buscarFotoBean.voltar}"
-								value="Cancelar" style="margin-left: 1%;"
-								styleClass="btn btn-success" />
-						</div>
-					</h:panelGroup>
+				<div class="form-group row">
+					<h:outputLabel styleClass="tesx-right col-sm-2 col-form-label"
+						value="Senha:*" />
+					<div class="col-sm-6">
+						<h:inputSecret styleClass="form-control font-size16"
+							value="#{buscarFotoBean.autenticarSenha}" required="true"
+							requiredMessage="o campo senha é obrigatório">
+							<f:passThroughAttribute name="placeholder"
+								value="Introduza a sua senha" />
+							<f:passThroughAttribute name="autofocus" value="true" />
+						</h:inputSecret>
+					</div>
 				</div>
-			</div>
+				<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
+					styleClass="btn btn-primary"
+					actionListener="#{buscarFotoBean.autenticar}" />
 
-		</h:form>
+
+
+			</h:panelGroup>
+			<h:panelGroup
+				rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean !=false}">
+				<div class="form-group row">
+					<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
+						value="Alterar Foto:" />
+					<div class="col-sm-3">
+						<h:inputFile label="Escolher arquivo" styleClass="profile-img"
+							value="#{buscarFotoBean.fotografia}">
+						</h:inputFile>
+					</div>
+				</div>
+				<div class="form-group row">
+					<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
+						value=" Ocultar E–mail na
+							Área Pública?" />
+					<div class="col-sm-2">
+						<h:selectOneMenu value="#{buscarFotoBean.usuario.ocultarEmail}"
+							styleClass="form-control ocultar-email">
+							<f:selectItem itemLabel="Não" itemValue="#{false}" />
+							<f:selectItem itemLabel="Sim" itemValue="#{true}" />
+						</h:selectOneMenu>
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
+						value="Estado Civil : " />
+
+					<div class="col-sm-5">
+						<h:panelGroup id="idEstadoCivil">
+							<h:selectOneMenu value="#{buscarFotoBean.usuario.estadoCivil}"
+								styleClass="form-control">
+								<f:selectItem itemLabel="SELECIONE..." itemValue="#{null}" />
+								<f:selectItems value="#{buscarFotoBean.estadoCivils}"
+									var="estadoCivil" itemLabel="#{estadoCivil}"
+									itemValue="#{estadoCivil}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+
+					</div>
+
+				</div>
+
+				<div class="form-group row">
+					<h:outputLabel styleClass="tesx-right col-sm-4 col-form-label"
+						value="Formação acadêmica/profissional: " />
+
+					<div class="col-sm-7">
+						<h:inputTextarea value="#{buscarFotoBean.funcionario.formacao}"
+							styleClass="form-control ocultar-email" rows="5" />
+
+
+					</div>
+
+				</div>
+
+				<div style="margin-top: 1%; text-align: center;">
+					<div class="col-sm-10">
+						<h:commandButton immediate="true"
+							action="#{buscarFotoBean.voltar}" value="Voltar"
+							styleClass="btn btn-success" />
+						<h:commandButton action="#{buscarFotoBean.atualizar}"
+							value="Atualizar Perfil" styleClass="btn btn-primary"
+							style="margin-left: 1%;" />
+
+					</div>
+				</div>
+			</h:panelGroup>
+		</div>
+	</div>
+
+</h:form>
 </html>
