--- a/src/main/webapp/academico/escola/restrito/senha.xhtml
+++ b/src/main/webapp/academico/escola/restrito/senha.xhtml
@@ -9,112 +9,109 @@
 
 
 <h:form id="formulario" styleClass="form-horizontal">
-			<!--Panel-->
-			<div class="card">
-				<h3 class="peg-titulo card-header primary-color white-text">Alterar
-					minha senha</h3>
-				<h:panelGroup
-					rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
-					<h:panelGrid styleClass="nao-ha-dado ui-widget-header margin">
-						<h:outputText
-							value="ATENÇÃO: Introduza a sua senha para prosseguir!"
-							style="margin:10px;display: inline-block;" />
-					</h:panelGrid>
+	<!--Panel-->
+	<div class="card">
+		<h3 class="peg-titulo card-header primary-color white-text">Alterar
+			minha senha</h3>
+		<h:panelGroup
+			rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
+			<h:panelGrid styleClass="nao-ha-dado ui-widget-header margin">
+				<h:outputText
+					value="ATENÇÃO: Introduza a sua senha para prosseguir!"
+					style="margin:10px;display: inline-block;" />
+			</h:panelGrid>
 
-				</h:panelGroup>
-				<p:messages closable="true"
-					style=" margin-left: 5px;margin-right:5px;" />
+		</h:panelGroup>
+		<p:messages closable="true"
+			style=" margin-left: 5px;margin-right:5px;" />
 
-				<div class="card-body">
-
-
-					<!-- Dados do Funcionário -->
-
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
+		<div class="card-body">
 
 
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-2 col-form-label"
-								value="Senha:*" />
-							<div class="col-sm-6">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.autenticarSenha}" required="true"
-									requiredMessage="o campo senha é obrigatório">
-									<f:passThroughAttribute name="placeholder"
-										value="Introduza a sua senha" />
-									<f:passThroughAttribute name="autofocus" value="true" />
-								</h:inputSecret>
-							</div>
-						</div>
-						<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
-							styleClass="btn btn-primary"
-							actionListener="#{buscarFotoBean.autenticar}" />
+			<!-- Dados do Funcionário -->
+
+			<h:panelGroup
+				rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
 
 
-
-					</h:panelGroup>
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean !=false}">
-						<div class="form-group row">
-							<h:outputLabel value="Usuário:"
-								styleClass="col-sm-3 control-label texto-label" />
-							<div class="col-sm-4">
-								<h:inputText disabled="true"
-									styleClass="form-control font-size16"
-									value="#{buscarFotoBean.usuario.login}" />
-							</div>
-						</div>
-
-
-						<div class="form-group row">
-							<h:outputLabel value="Nome do usuário:"
-								styleClass="col-sm-3 control-label texto-label" />
-							<div class="col-sm-8">
-								<h:inputText disabled="true"
-									styleClass="form-control font-size16"
-									value="#{buscarFotoBean.usuario.nome}" />
-							</div>
-						</div>
-						<div class="form-group row">
-							<h:outputLabel value="Senha Nova :*"
-								styleClass="col-sm-3 control-label texto-label" />
-							<div class="col-sm-5">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.usuario.novaSenha}">
-									<f:passThroughAttribute name="placeholder" value="Senha Nova" />
-									<f:passThroughAttribute name="autofocus" value="true" />
-								</h:inputSecret>
-							</div>
-						</div>
-						<div class="form-group row">
-							<h:outputLabel value="Confirmar Senha Nova :*"
-								styleClass="col-sm-3 control-label texto-label" />
-							<div class="col-sm-5">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.usuario.confirmaSenha}">
-									<f:passThroughAttribute name="placeholder" value="Senha Nova" />
-								</h:inputSecret>
-							</div>
-						</div>
-
-						<div style="margin-top: 1%; text-align: center;">
-
-							<h:commandButton value="Guardar"
-								actionListener="#{buscarFotoBean.alterarSenha}"
-								styleClass="btn btn-primary" />
-							<h:commandButton value="Cancelar"
-								action="#{buscarFotoBean.voltar}"
-								styleClass="btn btn-success" style="margin-left:1%;" />
-						</div>
+				<div class="form-group row">
+					<h:outputLabel styleClass="tesx-right col-sm-2 col-form-label"
+						value="Senha:*" />
+					<div class="col-sm-6">
+						<h:inputSecret styleClass="form-control font-size16"
+							value="#{buscarFotoBean.autenticarSenha}" required="true"
+							requiredMessage="o campo senha é obrigatório">
+							<f:passThroughAttribute name="placeholder"
+								value="Introduza a sua senha" />
+							<f:passThroughAttribute name="autofocus" value="true" />
+						</h:inputSecret>
+					</div>
+				</div>
+				<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
+					styleClass="btn btn-primary"
+					actionListener="#{buscarFotoBean.autenticar}" />
 
 
 
+			</h:panelGroup>
+			<h:panelGroup
+				rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean !=false}">
+				<div class="form-group row">
+					<h:outputLabel value="Usuário:"
+						styleClass="col-sm-3 control-label texto-label" />
+					<div class="col-sm-4">
+						<h:inputText disabled="true" styleClass="form-control font-size16"
+							value="#{buscarFotoBean.usuario.login}" />
+					</div>
+				</div>
 
-					</h:panelGroup>
+
+				<div class="form-group row">
+					<h:outputLabel value="Nome do usuário:"
+						styleClass="col-sm-3 control-label texto-label" />
+					<div class="col-sm-8">
+						<h:inputText disabled="true" styleClass="form-control font-size16"
+							value="#{buscarFotoBean.usuario.nome}" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<h:outputLabel value="Senha Nova :*"
+						styleClass="col-sm-3 control-label texto-label" />
+					<div class="col-sm-5">
+						<h:inputSecret styleClass="form-control font-size16"
+							value="#{buscarFotoBean.usuario.novaSenha}">
+							<f:passThroughAttribute name="placeholder" value="Senha Nova" />
+							<f:passThroughAttribute name="autofocus" value="true" />
+						</h:inputSecret>
+					</div>
+				</div>
+				<div class="form-group row">
+					<h:outputLabel value="Confirmar Senha Nova :*"
+						styleClass="col-sm-3 control-label texto-label" />
+					<div class="col-sm-5">
+						<h:inputSecret styleClass="form-control font-size16"
+							value="#{buscarFotoBean.usuario.confirmaSenha}">
+							<f:passThroughAttribute name="placeholder" value="Senha Nova" />
+						</h:inputSecret>
+					</div>
+				</div>
+
+				<div style="margin-top: 1%; text-align: center;">
+					<h:commandButton value="Voltar" action="#{buscarFotoBean.voltar}"
+						styleClass="btn btn-success" />
+					<h:commandButton value="Guardar"
+						actionListener="#{buscarFotoBean.alterarSenha}"
+						styleClass="btn btn-primary" style="margin-left:1%;" />
 
 				</div>
-			</div>
-			<!--/.Panel-->
-		</h:form>
+
+
+
+
+			</h:panelGroup>
+
+		</div>
+	</div>
+	<!--/.Panel-->
+</h:form>
 </html>
