--- a/src/main/webapp/academico/professor/index.xhtml
+++ b/src/main/webapp/academico/professor/index.xhtml
@@ -56,7 +56,7 @@
 					value="#{professorTurmaBean.turmasProfessor}" var="professor"
 					style="border: 3px solid #d8e3ef; background: #d8e3ef; "
 					rowClasses="linha1, linha2"
-					columnClasses="coluna4, coluna2, coluna3, coluna4, coluna5, coluna6, coluna6"
+					columnClasses="coluna4, coluna2, left, coluna4, coluna5, coluna6, coluna6"
 					headerClass="cabecalhoTabela center">
 
 					<h:column>
@@ -74,7 +74,7 @@
 						<h:outputText value="#{professor.turma.classe.descricao}"
 							style="	text-transform: uppercase; margin-left:4px;" />
 					</h:column>
-					<h:column id="idDisciplina">
+					<h:column id="idDisciplina" headerClass="left cabecalhoTabela">
 						<f:facet name="header">
 							<h:outputText value="Disciplina" style="width:270px;" />
 						</f:facet>
