--- a/src/main/webapp/academico/programador/pais/cadastro.xhtml
+++ b/src/main/webapp/academico/programador/pais/cadastro.xhtml
@@ -81,9 +81,10 @@
 
 						<h:dataTable value="#{paisBean.paises}" var="pais"
 							id="tabela-escola"
-							styleClass="table table-bordered tabelaProfessor  tabela-funcionario example"
+							styleClass="table table-bordered tabelaProfessor  tabela-funcionario left"
 							headerClass="cab-tabela" footerClass="fo-tabela"
-							style="margin-top: 20px;" rowClasses="linha2, linha1">
+							style="margin-top: 20px;" rowClasses="linha2, linha1"
+							columnClasses=",,,,center">
 
 							<h:column>
 								<f:facet name="header">
@@ -105,7 +106,7 @@
 									style=" margin-left:4px;" />
 							</h:column>
 
-							<h:column headerClass="center">
+							<h:column >
 								<f:facet name="header">
 									<h:outputText value="Data de cadastro" />
 								</f:facet>
@@ -115,7 +116,7 @@
 								</h:outputText>
 							</h:column>
 							<h:column>
-								<div class="form-group row" style="margin-bottom: 0;">
+								
 									<h:commandLink title="Editar dados dessae País?"
 										immediate="true" action="#{paisBean.editar(pais)}"
 										styleClass="tooltip-left"
@@ -134,7 +135,7 @@
 										<f:passThroughAttribute name="data-toggle" value="modal" />
 										<f:passThroughAttribute name="data-target" value="#myModal" />
 									</h:commandLink>
-								</div>
+								
 							</h:column>
 							<f:facet name="footer">
 								<h:outputText
