--- a/src/main/webapp/academico/escola/nota/nota.xhtml
+++ b/src/main/webapp/academico/escola/nota/nota.xhtml
@@ -23,7 +23,7 @@
 			value="#{notaBean.professorTurma.turma.classe.descricao} – #{notaBean.professorTurma.turma.descricao}  / #{notaBean.professorTurma.turma.turno.descricao}"
 			style="margin-left:10px; text-transform: uppercase; " />
 		<h:outputLabel value="Disciplina:" />
-		<h:outputText value="#{notaBean.professorTurma.disciplinaClasse.disciplina.descricao}"
+		<h:outputText value="#{notaBean.professorTurma.disciplina.descricao}"
 			style="margin-left:10px;" />
 		<h:outputLabel value="Trimestre:" />
 		<h:outputText value="#{notaBean.trimestreSelecionado.descricao}"
