--- a/src/main/webapp/academico/professor/nota/relatorio.xhtml
+++ b/src/main/webapp/academico/professor/nota/relatorio.xhtml
@@ -82,7 +82,7 @@
 										<h:outputText value="Disciplina" styleClass="margin-left" />
 									</f:facet>
 									<h:outputText
-										value="#{professor.disciplinaClasse.disciplina.descricao}"
+										value="#{professor.disciplina.descricao}"
 										styleClass="margin-left" />
 								</h:column>
 								<h:column>
