--- a/src/main/webapp/academico/aluno/nota/nota.xhtml
+++ b/src/main/webapp/academico/aluno/nota/nota.xhtml
@@ -87,7 +87,7 @@
 							rendered="#{alunoBean.matricula.classe.ciclo=='1º CICLO' and alunoBean.notas !=null}">
 							<table class="tblEditavel table hover" id="tblEditavel">
 
-								<THEAD>
+								<THEAD class="t">
 									<TR class="centralizar">
 										<th rowspan="2" class="padding-bottom">Disciplina</th>
 										<th colspan="3">AC</th>
@@ -99,7 +99,7 @@
 										<h:panelGroup></h:panelGroup>
 
 									</TR>
-									<TR class="centralizar">
+									<TR class="centralizar ">
 										<th>1ª</th>
 										<th>2ª</th>
 										<th>3ª</th>
@@ -107,14 +107,14 @@
 										<th>2ª</th>
 									</TR>
 								</THEAD>
-								<TBODY>
+								<TBODY class="t">
 									<h:panelGroup
 										rendered="#{alunoBean.trimestreAtivo.descricao!=null}">
 										<ui:repeat var="nota" value="#{alunoBean.notas}">
-											<tr>
+											<tr >
 												<td class="td nome-aluno"><h:outputText
 														id="idNomeAluno"
-														value="#{nota.disciplinaClasse.disciplina.descricao}"
+														value="#{nota.disciplina.descricao}"
 														title="#{nota.situacao}"
 														style="text-transform: uppercase; margin-left: 5px;" /></td>
 
@@ -303,10 +303,10 @@
 						<!-- Tabela de nota do Segundo ciclo -->
 						<h:panelGroup
 							rendered="#{authenticationContext.matriculaEscolaLogada.classe.ciclo=='2º CICLO' and alunoBean.notas !=null}">
-							<table class="tblEditavel table" id="tblEditavel">
+							<table class="tblEditavel table " id="tblEditavel">
 
-								<THEAD>
-									<TR class="centralizar">
+								<THEAD class="t">
+									<TR class="centralizar ">
 										<th rowspan="2" class="padding-bottom">Disciplina</th>
 										<th colspan="3">AC</th>
 										<th rowspan="2" class="texto-centro padding-bottom">MAC</th>
@@ -324,11 +324,11 @@
 										<th>2ª</th>
 									</TR>
 								</THEAD>
-								<TBODY>
+								<TBODY class="t">
 									<h:panelGroup
 										rendered="#{alunoBean.trimestreAtivo.descricao!=null}">
 										<ui:repeat var="nota" value="#{alunoBean.notas}">
-											<tr>
+											<tr >
 												<td class="td nome-aluno"><h:outputText
 														id="idNomeAluno" value="#{nota.disciplina.descricao}"
 														title="#{nota.situacao}"
